--- a/src/style/productList.css
+++ b/src/style/productList.css
@@ -107,18 +107,17 @@
 .products-list-holder .product-cart-list {
     width: 99%;
     padding: 0 .5%;
-    display: flex;
+    display: grid;
     flex-wrap: wrap;
-    gap: 1rem;
+    grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: 1rem;
+    grid-row-gap: 1rem;
+    max-height: 100vh;
+    overflow-y: scroll;
 }
 
 .product-cart {
-    width: calc(33% - 1rem);
     box-shadow: 0 6px 12px -2px rgba(50, 50, 93, .25), 0 3px 7px -3px rgba(0, 0, 0, .3);
-}
-
-.product-cart .cart-wrapper {
-    padding: 3%;
 }
 
 .product-cart .cart-wrapper {
@@ -185,7 +184,13 @@
 }
 
 /* meadia meadia query */
-@media only screen and (max-width: 600px) {
+@media only screen and (min-width: 700px) and (max-width: 992px) {
+    .products-list-holder .product-cart-list {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media only screen and (max-width:700px) {
     .searchBox-holder .searchBox {
         margin: 0;
     }
@@ -194,8 +199,9 @@
         width: 98%;
     }
 
-    .product-cart {
-        width: calc(100% - 1rem);
+    .products-list-holder .product-cart-list {
+        grid-template-columns: repeat(1, 1fr);
+        grid-column-gap: 0;
     }
 
     .searchBox-holder .searchBox .fliter {
